Fix admonition contrasts (#374)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -108,7 +108,7 @@ html[data-theme="dark"] .anchored:target {
     @apply text-note;
   }
   & .admonition-content {
-    @apply text-note-content;
+    @apply text-note-content dark:text-note-content-dark;
   }
 }
 
@@ -119,7 +119,7 @@ html[data-theme="dark"] .anchored:target {
     @apply text-tip;
   }
   & .admonition-content {
-    @apply text-tip-content;
+    @apply text-tip-content dark:text-tip-content-dark;
   }
 }
 
@@ -130,7 +130,7 @@ html[data-theme="dark"] .anchored:target {
     @apply text-info;
   }
   & .admonition-content {
-    @apply text-info-content;
+    @apply text-info-content dark:text-info-content-dark;
   }
 }
 
@@ -141,7 +141,7 @@ html[data-theme="dark"] .anchored:target {
     @apply text-warning;
   }
   & .admonition-content {
-    @apply text-warning-content;
+    @apply text-warning-content dark:text-warning-content-dark;
   }
 }
 
@@ -153,7 +153,7 @@ html[data-theme="dark"] .anchored:target {
     @apply text-caution;
   }
   & .admonition-content {
-    @apply text-caution-content;
+    @apply text-caution-content dark:text-caution-content-dark;
   }
 }
 
